--- a/GranTurismo/sezona2025_ver_1_10.html
+++ b/GranTurismo/sezona2025_ver_1_10.html
@@ -228,7 +228,7 @@ tbody tr:hover{ background: rgba(255,255,255,0.04); }
     </div>
 
     <div class="card">
-      <strong>Pořadí závodníků</strong>
+  <strong>Pořadí závodníků <span id="standingsMeta" class="small muted"></span></strong>
       <table id="standings"><thead><tr><th>Závodník</th><th>Body</th><th>Vítězství</th><th>Pódiová umístění</th><th>DNS</th></tr></thead><tbody></tbody></table>
     </div>
 
