--- a/GranTurismo/sezona2025_ver_1_10.html
+++ b/GranTurismo/sezona2025_ver_1_10.html
@@ -340,7 +340,7 @@ tbody tr:hover{ background: rgba(255,255,255,0.04); }
       <th>Potřeba na titul</th>
       <th>Ve hře o titul</th>
       <th>Ve hře o pódium</th>
-      <th>Pravděpodobnost (titul/pódium)</th><!-- ← přidané -->
+      <th>Pravděpodobnost podle formy</th>
     </tr>
   </thead>
   <tbody></tbody>
@@ -995,146 +995,207 @@ function renderStandingsAndChart(){
   pointsChart = new Chart(ctx,{ type:'line', data:{labels,datasets}, options:{ responsive:true, plugins:{legend:{labels:{color:'#fff'}}}, scales:{x:{ticks:{color:'#fff'}}, y:{ticks:{color:'#fff'}, beginAtZero:true}} }});
 }
 
-/* === Titulová matematika – společná simulace všech jezdců === */
-function renderTitleMath(){
-  const tbody = document.querySelector('#titleMathTable tbody');
-  const meta  = document.querySelector('#tmMeta');
-  if(!tbody) return;
+/* === Titulová matematika (BT/PL) === */
 
-  // --- 1) nasbírej hotové body ---
+/* Bradley–Terry ratingy z posledních K závodů s exponenciálním vážením */
+function computeBTRatingsFromRecent(K=5, decay=0.85){
+  const completed = racesCache
+    .filter(isCompletedRace)
+    .sort((a,b)=> new Date(a.datum||a.date) - new Date(b.datum||b.date));
+
+  const recent = completed.slice(-K);
+  // wins[a][b] = kolikrát (váženo) a porazil b
+  const wins = {};
+  drivers.forEach(a=>{
+    wins[a] = {};
+    drivers.forEach(b=>{ if(a!==b) wins[a][b]=0; });
+  });
+
+  recent.forEach((r, idx)=>{
+    const w = Math.pow(decay, (recent.length-1-idx)); // novější závody víc váží
+    const arr = applyPenalties(getResultsArray(r), Array.isArray(r.penalties)?r.penalties:[]);
+    const finishers = arr
+      .filter(n=> n && n!=='DNS' && n!=='—')
+      .map(normName);
+
+    // pro zachování pořadí bereme pozice z 'arr'
+    for(let i=0;i<finishers.length;i++){
+      const ai = finishers[i];
+      for(let j=i+1;j<finishers.length;j++){
+        const bj = finishers[j];
+        if(ai!==bj){
+          wins[ai][bj] = (wins[ai][bj]||0) + w; // ai porazil bj
+        }
+      }
+    }
+  });
+
+  // MLE pomocí MM-iterací (malý prior, ať nic nezkolabuje)
+  const eps = 1e-9;
+  const prior = 0.1;
+  const wMap = {};
+  drivers.forEach(d=> wMap[d]=1);
+
+  for(let it=0; it<60; it++){
+    const wNew = {};
+    drivers.forEach(i=>{
+      let Wi = prior;       // výhry
+      let denom = 0;        // suma m_ij / (w_i + w_j)
+      drivers.forEach(j=>{
+        if(i===j) return;
+        const wij = (wins[i][j]||0);
+        const wji = (wins[j][i]||0);
+        const mij = wij + wji; // počty “zápasů” (váženě)
+        if(mij>0){
+          Wi += wij;
+          denom += mij / ( (wMap[i]||1) + (wMap[j]||1) );
+        }
+      });
+      wNew[i] = Math.max(eps, Wi / Math.max(eps, denom));
+    });
+    // normalizace (měřítko je jedno, ale kvůli stabilitě srovnáme)
+    const sumW = drivers.reduce((s,d)=>s+(wNew[d]||0),0) || 1;
+    drivers.forEach(d=> wMap[d] = (wNew[d]||eps) * drivers.length / sumW);
+  }
+
+  // pokud skoro žádná data, spadni na rovnoměrné rozdělení
+  let totalPairs = 0;
+  drivers.forEach(i=> drivers.forEach(j=>{ if(i!==j) totalPairs += (wins[i][j]||0); }));
+  if(totalPairs < 1e-6){
+    drivers.forEach(d=> wMap[d]=1);
+  }
+
+  // normalizuj na sumu 1
+  const sum = drivers.reduce((s,d)=>s+wMap[d],0) || 1;
+  drivers.forEach(d=> wMap[d]/=sum);
+  return wMap; // map(name -> váha)
+}
+
+/* Plackett–Luce draw pořadí podle vah */
+function drawOrderPL(weights){
+  const remain = drivers.slice();
+  const w = {}; drivers.forEach(d=> w[d]=Math.max(1e-9, weights[d]||0));
+  const order = [];
+  while(remain.length){
+    const total = remain.reduce((s,n)=>s+(w[n]||0),0);
+    let r = Math.random()*total, acc=0, pick=remain[0];
+    for(const name of remain){
+      acc += (w[name]||0);
+      if(r<=acc){ pick=name; break; }
+    }
+    order.push(pick);
+    const idx = remain.indexOf(pick);
+    if(idx>-1) remain.splice(idx,1);
+  }
+  return order;
+}
+
+/* Monte Carlo simulace titulu s BT/PL vahami – pravděpodobnost titulu */
+function simulateTitleOddsBT(simCount=2000, K=5, decay=0.85){
+  // 1) současné body
+  const completed = racesCache.filter(isCompletedRace);
+  const pts = {}; drivers.forEach(d=>pts[d]=0);
+  completed
+    .sort((a,b)=> new Date(a.datum||a.date) - new Date(b.datum||b.date))
+    .forEach(r=>{
+      const arr = applyPenalties(getResultsArray(r), Array.isArray(r.penalties)?r.penalties:[]);
+      for(let i=0;i<5;i++){
+        const n = arr[i];
+        if(!n || n==='DNS' || n==='—') continue;
+        const d = normName(n);
+        pts[d] = (pts[d]||0) + (pointsMap[i]||0);
+      }
+    });
+
+  // 2) zbylé závody
+  const remaining = racesCache.filter(r=>!isCompletedRace(r)).length;
+  if(remaining<=0){
+    // hotovo: 100 % pro aktuálního vítěze, případný tie rozdělíme
+    const arr = drivers.map(d=>({d, p:pts[d]||0})).sort((a,b)=>b.p-a.p);
+    const top = arr[0]?.p ?? 0;
+    const tied = arr.filter(x=>x.p===top).map(x=>x.d);
+    const out={}; drivers.forEach(d=>out[d]=0);
+    tied.forEach(d=> out[d]+=1/tied.length);
+    return out;
+  }
+
+  // 3) váhy z formy (BT na K posledních závodech)
+  const weights = computeBTRatingsFromRecent(K,decay);
+
+  // 4) simulace
+  const winCount={}; drivers.forEach(d=>winCount[d]=0);
+  for(let s=0;s<simCount;s++){
+    const cur = {}; drivers.forEach(d=> cur[d]=pts[d]||0);
+    for(let r=0;r<remaining;r++){
+      const order = drawOrderPL(weights);
+      for(let i=0;i<order.length;i++){
+        const d = order[i];
+        if(i<pointsMap.length) cur[d] += (pointsMap[i]||0);
+      }
+    }
+    // vítěz (tie -> podělíme)
+    const arr = drivers.map(d=>({d, p:cur[d]})).sort((a,b)=>b.p-a.p);
+    const top = arr[0].p;
+    const tied = arr.filter(x=>x.p===top).map(x=>x.d);
+    tied.forEach(d=> winCount[d] += 1/tied.length);
+  }
+
+  const out={}; drivers.forEach(d=> out[d] = (winCount[d]||0)/simCount);
+  return out; // map(name -> P(titul))
+}
+
+/* Render tabulky – doplněno o sloupec „Pravděpodobnost podle formy“ */
+function renderTitleMath(){
+  // 1) aktuální body z dokončených závodů
   const completed = racesCache
     .filter(isCompletedRace)
     .sort((a,b)=> new Date(a.datum||a.date||0) - new Date(b.datum||b.date||0));
 
   const pts = {}; drivers.forEach(d=>pts[d]=0);
   completed.forEach(r=>{
-    const applied = applyPenalties(getResultsArray(r), Array.isArray(r.penalties)? r.penalties : []);
-    for(let i=0;i<Math.min(pointsMap.length, applied.length);i++){
-      const n = applied[i];
+    const arr = applyPenalties(getResultsArray(r), Array.isArray(r.penalties)? r.penalties : []);
+    for(let i=0;i<5;i++){
+      const n = arr[i];
       if(!n || n==='DNS' || n==='—') continue;
       const drv = normName(n);
       pts[drv] = (pts[drv]||0) + (pointsMap[i]||0);
     }
   });
 
+  // 2) zbývající závody + prahy
   const remaining = racesCache.filter(r=>!isCompletedRace(r)).length;
   const maxPerRace = Math.max(...pointsMap);
 
-  // Současné pořadí (pro "matematicky ve hře")
   const standingArr = drivers.map(d=>({ name:d, pts:(pts[d]||0) }))
     .sort((a,b)=> b.pts - a.pts);
+
   const leaderPts = standingArr[0]?.pts || 0;
   const thirdPts  = standingArr[2]?.pts ?? 0;
 
-  // Max dosažitelné body
+  // 3) max dosažitelné body
   const maxPossible = {};
-  drivers.forEach(d=>{ maxPossible[d] = (pts[d]||0) + remaining*maxPerRace; });
-
-  // --- 2) odhad „síly formy“ z posledních 5 závodů ---
-  const LAST = 5;
-  const lastFinishes = {};   // d -> [pozice(1..6)]
-  const lastPoints   = {};   // d -> [body]
-  drivers.forEach(d=>{ lastFinishes[d]=[]; lastPoints[d]=[]; });
-
-  completed.forEach(r=>{
-    const base = getResultsArray(r);
-    const applied = applyPenalties(base, Array.isArray(r.penalties)?r.penalties:[]);
-    drivers.forEach(d=>{
-      const i = applied.findIndex(x=>normName(x)===d);
-      if(i>-1 && applied[i]!=='DNS' && applied[i]!=='—'){
-        lastFinishes[d].push(i+1);
-        lastPoints[d].push(pointsMap[i]||0);
-      }else{
-        // DNS (nebo nejel) – považuj jako velmi slabý výsledek
-        lastFinishes[d].push(6);
-        lastPoints[d].push(0);
-      }
-    });
-  });
-
-  function avg(arr){ return arr.length ? arr.reduce((s,x)=>s+x,0)/arr.length : 0; }
-
-  // Síla: kombinace nízké průměrné pozice a bodů / závod
-  const strength = {};
   drivers.forEach(d=>{
-    const fin = lastFinishes[d].slice(-LAST);
-    const ptsR = lastPoints[d].slice(-LAST);
-    // fallbacky, kdyby sezóna teprve začala
-    const avgPos  = fin.length ? avg(fin) : 4.0;
-    const avgPtsR = ptsR.length ? avg(ptsR) : ((pts[d]||0) / Math.max(1, completed.length));
-
-    // 6.2 - avgPos => 1.2..5.2 (lepší = větší), + malý vliv bodů
-    const wBase = Math.max(0.15, 6.2 - avgPos);
-    const wPts  = (avgPtsR / maxPerRace) * 3.0; // 0..3
-    strength[d] = wBase + wPts; // typicky ~1..8
+    maxPossible[d] = (pts[d]||0) + remaining * maxPerRace;
   });
 
-  // --- 3) Monte Carlo: simulace zbylých závodů společně ---
-  const TRIALS = 2500; // můžeš snížit/zvýšit
-  const titleHits  = {}; drivers.forEach(d=>titleHits[d]=0);
-  const podiumHits = {}; drivers.forEach(d=>podiumHits[d]=0);
+  // 4) simulovaná pravděpodobnost titulu podle formy (BT/PL)
+  const probs = simulateTitleOddsBT(2000, 5, 0.85); // můžeš klidně snížit/ zvýšit N
 
-  function drawOrder(weightsMap){
-    const pool = [...drivers];
-    const order = [];
-    while(pool.length){
-      const sum = pool.reduce((s,nm)=>s+(weightsMap[nm]||0.1),0);
-      let r = Math.random()*sum;
-      let pick = 0;
-      for(let i=0;i<pool.length;i++){
-        const nm = pool[i];
-        r -= (weightsMap[nm]||0.1);
-        if(r<=0){ pick=i; break; }
-      }
-      order.push(pool[pick]);
-      pool.splice(pick,1);
-    }
-    return order;
-  }
-
-  if(remaining===0){
-    // deterministicky dopočítej pravděpodobnosti (už se nepojede)
-    const sorted = drivers.map(n=>({name:n, pts: pts[n]||0})).sort((a,b)=>b.pts-a.pts);
-    const top = sorted[0]?.pts ?? 0;
-    const winners = new Set(sorted.filter(x=>x.pts===top).map(x=>x.name));
-    let cut3 = sorted[Math.min(2, sorted.length-1)]?.pts ?? -1;
-    const podiumSet = new Set(sorted.filter(x=>x.pts>=cut3).map(x=>x.name));
-    drivers.forEach(d=>{
-      titleHits[d]  = winners.has(d) ? TRIALS : 0;
-      podiumHits[d] = podiumSet.has(d) ? TRIALS : 0;
-    });
-  }else{
-    for(let t=0;t<TRIALS;t++){
-      const cur = {}; drivers.forEach(d=>cur[d]=(pts[d]||0));
-      for(let r=0;r<remaining;r++){
-        const order = drawOrder(strength); // celé pořadí naráz
-        for(let i=0;i<order.length && i<pointsMap.length;i++){
-          cur[order[i]] += pointsMap[i];
-        }
-      }
-      const sorted = drivers.map(n=>({name:n, pts: cur[n]})).sort((a,b)=>b.pts-a.pts);
-      const topPtsSim = sorted[0].pts;
-      const winners = sorted.filter(x=>x.pts===topPtsSim).map(x=>x.name);
-      winners.forEach(nm=> titleHits[nm]++);
-
-      // pódium – včetně remíz na hraně 3. místa
-      const thirdCut = sorted[Math.min(2, sorted.length-1)].pts;
-      sorted.filter(x=>x.pts>=thirdCut).forEach(x=> podiumHits[x.name]++);
-    }
-  }
-
-  // --- 4) Render tabulky ---
+  // 5) render
+  const tbody = document.querySelector('#titleMathTable tbody');
+  if(!tbody) return;
   tbody.innerHTML = '';
+
   standingArr.forEach(row=>{
     const name = row.name;
     const nowPts = row.pts;
     const maxPts = maxPossible[name];
     const needForTitle = Math.max(0, leaderPts - nowPts);
-    const canWin   = maxPts >= leaderPts;
-    const canPod   = maxPts >= thirdPts;
+    const canWin = maxPts >= leaderPts;
+    const canPodium = maxPts >= thirdPts;
 
-    const pTitle = Math.round((titleHits[name]/TRIALS)*100);
-    const pPod   = Math.round((podiumHits[name]/TRIALS)*100);
+    const p = Math.max(0, Math.min(1, probs[name]||0));
+    const probStr = (p*100).toFixed(p>=0.995?0: (p>=0.1?1:2)) + ' %';
 
     const tr = document.createElement('tr');
     tr.innerHTML = `
@@ -1143,14 +1204,15 @@ function renderTitleMath(){
       <td>${maxPts}</td>
       <td>${needForTitle}</td>
       <td>${canWin ? 'ANO' : 'NE'}</td>
-      <td>${canPod ? 'ANO' : 'NE'}</td>
-      <td>${pTitle}% / ${pPod}%</td>
+      <td>${canPodium ? 'ANO' : 'NE'}</td>
+      <td>${probStr}</td>
     `;
     tbody.appendChild(tr);
   });
 
+  const meta = document.querySelector('#tmMeta');
   if(meta){
-    meta.textContent = `• zbývá závodů: ${remaining} • max bodů na závod: ${maxPerRace} • simulací: ${TRIALS}`;
+    meta.textContent = `• zbývá závodů: ${remaining} • max bodů na závod: ${maxPerRace} • BT z posledních 5 závodů (decay 0.85)`;
   }
 }
 
